# ChangeLog for sys-apps/calculate-lib
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*calculate-lib-2.2.15-r1 (23 May 2011)

  23 May 2011; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
  +calculate-lib-2.2.15-r1.ebuild,
  +files/calculate-lib-2.2.15-fix_get_from_xorg.patch:
  Update lib for bug fix.

*calculate-lib-2.2.15 (18 May 2011)

  18 May 2011; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
  +calculate-lib-2.2.15.ebuild:
  Bump version

*calculate-lib-2.1.8-r2 (17 May 2011)

  17 May 2011; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
  +calculate-lib-2.1.8-r2.ebuild, +files/calculate-lib-2.1.8-fix_fifo.patch:
  Fix fifo processing.

*calculate-lib-2.2.14-r2 (13 May 2011)

  13 May 2011; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
  +calculate-lib-2.2.14-r2.ebuild,
  +files/calculate-lib-2.2.14-fix_root_type_detect.patch:
  Update for bugfix.

*calculate-lib-2.2.14 (20 Apr 2011)

  20 Apr 2011; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
  +calculate-lib-2.2.14.ebuild:
  Bump version

  13 Apr 2011; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
  calculate-lib-2.1.8-r1.ebuild, -calculate-lib-2.2.11-r2.ebuild,
  -calculate-lib-2.2.11-r3.ebuild, -calculate-lib-2.2.11-r4.ebuild,
  -files/calculate-lib-2.2.11-autoupdate_opt.patch,
  -files/calculate-lib-2.2.11-dialog_fix.patch,
  -files/calculate-lib-2.2.11-feature_for_builder.patch,
  -files/calculate-lib-2.2.11-fix_C_locale.patch,
  -calculate-lib-2.2.12.ebuild, -calculate-lib-2.2.12-r1.ebuild,
  -calculate-lib-2.2.12-r2.ebuild, -calculate-lib-2.2.12-r3.ebuild,
  -calculate-lib-2.2.12-r4.ebuild, -calculate-lib-2.2.12-r5.ebuild,
  -files/calculate-lib-2.2.12-exec_option.patch,
  -files/calculate-lib-2.2.12-fix_magic_type.patch,
  -files/calculate-lib-2.2.12-fix_plasma_format.patch,
  -files/calculate-lib-2.2.12-fix_traceback_initrd.patch,
  calculate-lib-2.2.13.ebuild, calculate-lib-2.2.9999.ebuild,
  calculate-lib-9999.ebuild:
  Remove old. Fix EAPI.
