@@ -4,10 +4,12 @@ AUX calculate-lib-2.2.14-fix_root_type_detect.patch 6398 RMD160 acc25d01099f4bc0
 AUX calculate-lib-2.2.15-fix_get_from_xorg.patch 1781 RMD160 5ab65ae39abebcb114b3c7870b5a501ad3e24fce SHA1 288c51322988bd3d64ff7a01f7d77bac275cda78 SHA256 b90eb1cc093d4dfef43b38077fbb993b0bb92f75158ceaea1b768427d24915fc
 AUX calculate-lib-2.2.8-file.patch 747 RMD160 8a1f90c822eaefac69b67aa6999a1dc8c2b51b9f SHA1 aeded1b0587785145f4e62f3e81a2726e7c4312d SHA256 45ce03a248d8bec22bbdf006ce607809761304d255467e687242f9423c8413a4
 AUX lib_i18n_path.patch 1114 RMD160 6e561c46e91105f4e7686678771da21e8f3685a2 SHA1 b58e8906104b4b9d1a1bd8ecb6959767cad2d329 SHA256 2913821d3c069612485e6dd7fb0e71bc06e5061054309ad9ed6bac29eee732f2
+DIST calculate-lib-2.1.11.tar.bz2 61687 RMD160 93ca4f84ff2cd7018addfd4de162959d78e51f78 SHA1 53149951c346fea7709cb43b4d8ebefe63acb0fd SHA256 62976c08d4fb4810389ace6f5a99abb5a962f6c8d9053ff943d0669480fb5599
 DIST calculate-lib-2.1.8.tar.bz2 61178 RMD160 4a4ed063a9b4d3b82723f5f6eb046c97ad9fcda1 SHA1 93eb20057afff6e98c409388e1259a3ad078bb7a SHA256 ef8e315001663da7a45e69b82dc7c158fb0e10bd567efa95bf8a654ed441144a
 DIST calculate-lib-2.2.13.tar.bz2 108385 RMD160 d604e68f58c845c7735b751e7ed4604bd17926f6 SHA1 b4130b09f041c91fd97a0ed56c769052ee158f4c SHA256 204f5dc8abcdd4528c9a3041a551c4080ecf30507115b215282880d059c93d49
 DIST calculate-lib-2.2.14.tar.bz2 108601 RMD160 e45e12b5eac886f31e6fd75d3ebe8538f51674a1 SHA1 ae25dc59a91b827a35dbf0f492ea4f5bbae5ab3c SHA256 e6e375d746bb67dc80de37060633cc67194b489855a572bfe0b0d95dbd5df098
 DIST calculate-lib-2.2.15.tar.bz2 109037 RMD160 643f8a670cdeb9ad8435884bc91052f9240b6c35 SHA1 a1931a6671fc4f8428b61f754ac7e0b965e858cd SHA256 726f4d9aa716d7f46b3a4d0ecdf0aa9ab2ae01e4c9b14dfa2771858afa039c6c
+EBUILD calculate-lib-2.1.11.ebuild 585 RMD160 742e544ac2f98074ac2cf29227c931e213cff023 SHA1 64e098b169359f3106c0e360261cb5fbb99602f4 SHA256 501467786f3943c8fcf47b787b9582c8aa4f8dfec9e664d784f098b6a3702ba7
 EBUILD calculate-lib-2.1.8-r1.ebuild 730 RMD160 a207fbb024eaedeff679eb052b6ca04f289f914f SHA1 68c72562dc796958dd83dc4c59b2444678180b52 SHA256 b6a343b0f4d9e557ca42f5505c56c2373c04d1fa98191cf03b15cd0cdd0bb603
 EBUILD calculate-lib-2.1.8-r2.ebuild 810 RMD160 ff412a1e0f7ea1ec3493738e23e3e7ec9334d49d SHA1 251a1fa961d07ef51c1c29ff930f73839b838bc8 SHA256 9cb04ff79362d497c9ac6a52353933683201337cb50104ab7a0b70ba6fdb04c1
 EBUILD calculate-lib-2.2.13.ebuild 620 RMD160 c6b655288e00b8225c87a7c0aee27df1602978bf SHA1 8effba1ef6dec2caf6c75162ced40d8d9c571702 SHA256 733ddccc79c4df5fac82a50a8c94b1494033ed7fb89f4df6ec95d5e8e10ab1d7
@@ -18,5 +20,5 @@ EBUILD calculate-lib-2.2.15-r1.ebuild 746 RMD160 5cb4e3ee379a8be31b3f44ec5419646
 EBUILD calculate-lib-2.2.15.ebuild 620 RMD160 c6b655288e00b8225c87a7c0aee27df1602978bf SHA1 8effba1ef6dec2caf6c75162ced40d8d9c571702 SHA256 733ddccc79c4df5fac82a50a8c94b1494033ed7fb89f4df6ec95d5e8e10ab1d7
 EBUILD calculate-lib-2.2.9999.ebuild 726 RMD160 6dce718f317825c712f7c9595a3e712ef6222cf9 SHA1 42e1607a36e826310ef5ed317d717c5aa8acc2bf SHA256 dce73aafa346ea1fd88b6e99d8f6184a562de56e3eb871c1b5849890b13c34c2
 EBUILD calculate-lib-9999.ebuild 476 RMD160 3df165f011b324fa8dc37d0443e941263943dd61 SHA1 069ab864dc83f32c69c4349d807d25e1196756ee SHA256 07a628ede4f47849908dd543f879ab8b40a5ca887b892fa0f5cf6c1ef2a24cab
-MISC ChangeLog 20231 RMD160 bce8bd7eee6f69ecbbaa6d9361ae410056f0421e SHA1 e9946953fbf09330c0b8c4cffb12fb5512ad2cc7 SHA256 a17e1e42227b6fe58b98f2baf32116c33aa8e98eafd5ba772a0e531900413fbd
+MISC ChangeLog 20380 RMD160 92c2ecfd7d57a851268b455c3d3ba8a729391d5a SHA1 60b464b40c8b3ddeb3427f413b7c8b5b5a5843d7 SHA256 8967a9efca2d3b87189ba1d320e4064db840d5c7a1607a4da742dc9c089506fe
 MISC metadata.xml 303 RMD160 774b65ed76939d6878496ad6ef6451849bdced05 SHA1 7d08569697a290ede98c88ab59db3cdc3037bd15 SHA256 181519d9679fd9aee9a7a9806733a50728d3da0b1e0ad54f31499200f7f5c6ec
