@@ -2,10 +2,12 @@ AUX calculate-server-2.1.13-fifo_fix.patch 1122 RMD160 e015ecfd39ff9dd62fbee98ae
 AUX calculate-server-2.1.13-fix_bind.patch 543 RMD160 e50c44995eadaf6d2be753691886969f2f836775 SHA1 deffc9c0b65970dffdf6d5b971721c81c473bee0 SHA256 f6148f9f0029d58c36c2ce8a630b9c232b9f1f356b40973137facb9cf8f65700
 AUX calculate-server-2.1.13-rename_cl_update.patch 4885 RMD160 0eb4083d8a6e381fbc88044d9f6b8eba8b837bf5 SHA1 10ad7a4967f58049a71b1e2e7fa2e1289a5c8072 SHA256 87d7435e5a987f18644022bef20f7c4deafd1fd162a3a3656999aff74eebaa59
 DIST calculate-server-2.1.13.tar.bz2 157717 RMD160 42d15a964a8c94774003d89ddc6bd834d20b1d5d SHA1 08e47e64aa8173b76a73693346d465ed62ac2ea1 SHA256 c748759f792c21dd28f2659bfeccf2a707c08f36a5d49766ceb6b922a98e930e
+DIST calculate-server-2.1.14.tar.bz2 167957 RMD160 a2d349f1cd6a6107f7e32b79b5189e5a0530b440 SHA1 3f23fb09fb7b67f14d48c8ffb3edc03e5eef95a9 SHA256 3c5b4de78df05c545884995d50fd5b8b53c6d9742d91e699d8fd1d9020168e05
 EBUILD calculate-server-2.1.13-r1.ebuild 5100 RMD160 1a8e0de5d7a283a4bdddc644e4cb72d8c9a2f5a8 SHA1 4b4002c079fe429e94fc9fe750847a588b1ece94 SHA256 cdce4a2c954bfcdc6deb32c2af1a5a56083aedf7a382f7645ac1fd83043a82d6
 EBUILD calculate-server-2.1.13-r2.ebuild 5184 RMD160 c25bba74a1d999c47066a04092f96b7a993aeba4 SHA1 6cebce6f3342b7a9b4d173a22f25e91acb9aecd9 SHA256 764e2f219aaa1db76c0c64376287529e3a69b3d87041df5aa3add663c01de4ce
 EBUILD calculate-server-2.1.13-r3.ebuild 5261 RMD160 0cba75d6a711127b6a213e6181e346539aa60d84 SHA1 2056fa023ba26f855bc58431d639381c291a1a94 SHA256 7909ee9e15be1005374e1dda50bfd4ef475c9dcca97cb0ea1f4bc565ca2a528c
 EBUILD calculate-server-2.1.13.ebuild 4947 RMD160 f84f1384fcd7705a718b5c88b6066e262987ac3b SHA1 596a88a3e393f689a0d76ddb3dc723d03b3eb816 SHA256 feee22c11dd0617ea25164445bd1f074d06a3e30a2b57704d325f71ae6e4bb66
-EBUILD calculate-server-9999.ebuild 982 RMD160 0f4120756b5a9b533783c3ba95380507b6f9cd1b SHA1 f77edc90b28cfe8b2d12fd8830fe1641e5119bd7 SHA256 0486a61066cee349510bef0f68e8ffa37ce5ea5a2be0859fbec7eacadcb91913
-MISC ChangeLog 6094 RMD160 7bb5138ac2080bd1d256fe18e52951b7f44f3bce SHA1 dca702637fca2adc0e2c42e8a2425fcb6e02b598 SHA256 9071c0e62099db74bddf1d84f001d00a8250a018069be1d8e1a4212cd4909e3d
+EBUILD calculate-server-2.1.14.ebuild 4966 RMD160 0a71a8217e53bec9c87669713e3007a5097e9b19 SHA1 6c284957f2841655facc4301cc7a9945d5f95876 SHA256 a7d071a4a1b10e1a03ebec2509be004ddcad0831976a05e88aa2ebbbee4fa986
+EBUILD calculate-server-9999.ebuild 1032 RMD160 1b7daa72a3ed2e85c4d12a9e7acbcd12dfb9254b SHA1 05b16c21743b21cc5dfdde4a917f426b1bfcc46d SHA256 5df5730fe598902d17b3b1d6f591e1a0c16e90c0be7986dfa62390aa6c991b58
+MISC ChangeLog 6287 RMD160 9328385421a6804834af3e015f27b853056cca3d SHA1 62b538ee6f711bda51493f2aaa6180e0841c7a30 SHA256 28e28a4bb04615d58818dc1bf3b655e6c1e1aba7d5a770f8dc81e4d891bbae59
 MISC metadata.xml 286 RMD160 e243725ec1a1302cab0d0efee76a4a926e855916 SHA1 6071aa604ea5a1ba8e1772e8f37a24f26b893d8d SHA256 aab7ddde310df96da76277d5ae340a4b0926bec3b354bfb2fea3288081036d74
