@@ -15,6 +15,7 @@ EBUILD calculate-utilities-2.2.15-r1.ebuild 832 RMD160 688a5ec9a4cb023e8ece8bf14
 EBUILD calculate-utilities-2.2.15-r2.ebuild 832 RMD160 cb65479ab3ab4ffcc582f2a86ceff5efee0e5b30 SHA1 e0ea10eb3d28c8a06937f90b419c975c6d14a463 SHA256 ab7e18c952928326e4bbfdf7998f8546c04f837a2434f672868b716775ac36db
 EBUILD calculate-utilities-2.2.15-r3.ebuild 835 RMD160 fdaed0dfa80627e09cd92df7757973e73748ac19 SHA1 861e875d5b3b7a69bc5e743180ece46af0a51a30 SHA256 c4f255a9c0e7b2a3c490f9bac66a89d4215281e79cbb1e38bd0e8e03ce7d88af
 EBUILD calculate-utilities-2.2.15-r4.ebuild 838 RMD160 0ac5b0baa9591e32d3bc1fb83259a1af6f145ef3 SHA1 cb20981186bc64ac2164699e4e28cd63c121ff71 SHA256 3b6c1f777bac3ca53fea9a2441873ca79cd6241d135f9f9c5285a5f678ae2161
+EBUILD calculate-utilities-2.2.15-r5.ebuild 835 RMD160 42276695e9bf95587ec5eace649fa843e9362328 SHA1 bae5173d4ff7ab20a7f77a559efc9da9b5670b48 SHA256 2ee5b5a91cb90139cef361a3db7cac87c846009bf7db3a6ac0b99fd444c7bc9f
 EBUILD calculate-utilities-2.2.15.ebuild 829 RMD160 08af4128804390a3611da9de6a0877f86f837c03 SHA1 d4c713a63a074a193a2a8a614ed80c5e343af871 SHA256 5e60616c449b464b7163a25c32f1dd5a565d5c878b823a23b2848fda49d0afca
 EBUILD calculate-utilities-2.2.9999.ebuild 840 RMD160 0c7324a9ed480118ac19f62b162c9ee62c25f964 SHA1 7dadab1430ed147334ed7e9b4fcc86dc99e25d56 SHA256 f3ee28f9f765e7302c83eb4a15a09bdf066f09e6b40e34f6d52157a946df5e66
-MISC ChangeLog 9249 RMD160 7024e11d15ab8c9aa9c9ec703821a210a5242238 SHA1 f8007a19616e20cf4a913ac9d170673ee564a4eb SHA256 cb333ec0c3ab1f739672d16566dadd9673c3bef9d043b142d681e8306897c9db
+MISC ChangeLog 9428 RMD160 3b392d5f5fe4fddf894a7aa425c20b8a17967a65 SHA1 9bf143bd69fbc4fe85bbfecfdae84227d48a6284 SHA256 b045f89887da665c04034df7a9efaa642e3be3995271836bd16f1aa366955427
