@@ -2,6 +2,12 @@
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*calculate-server-2.1.14 (30 May 2011)
+
+  30 May 2011; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
+  +calculate-server-2.1.14.ebuild, calculate-server-9999.ebuild:
+  Update calculate-server.
+
 *calculate-server-2.1.13-r3 (20 May 2011)
 
   20 May 2011; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
