@@ -2,6 +2,12 @@
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*calculate-utilities-2.2.15-r5 (30 May 2011)
+
+  30 May 2011; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
+  +calculate-utilities-2.2.15-r5.ebuild:
+  Update for calculate-server.
+
 *calculate-utilities-2.2.15-r4 (23 May 2011)
 
   23 May 2011; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
