@@ -2,6 +2,12 @@
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*calculate-lib-2.1.11 (30 May 2011)
+
+  30 May 2011; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
+  +calculate-lib-2.1.11.ebuild:
+  Update 2.1 libs.
+
 *calculate-lib-2.2.15-r1 (23 May 2011)
 
   23 May 2011; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
